<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Google I/O 2012</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_add_schedule">Add to agenda</string>
    <string name="description_remove_schedule">Remove from agenda</string>
    <string name="description_social_stream">View Google+ stream</string>
    <string name="description_compose">New post</string>
    <string name="description_add_account">Add account</string>
    <string name="description_about">About</string>
    <string name="description_sign_out">Sign out</string>
    <string name="description_captions">Captions</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_session_detail">Session Information</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_vendors">Sandbox</string>
    <string name="title_vendor_detail">Company Information</string>
    <string name="title_map">Map</string>
    <string name="title_tagstream">Google+ Posts</string>
    <string name="title_about">About</string>
    <string name="title_share">Share using</string>
    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \"&lt;b&gt;<xliff:g id="query">%1$s</xliff:g>&lt;b&gt;\"</string>
    <string name="title_my_schedule">My Agenda</string>
    <string name="title_explore">Explore</string>
    <string name="title_stream">Stream</string>
    <plurals name="title_selected_sessions">
        <item quantity="one">1 session selected</item>
        <item quantity="other"><xliff:g id="num_sessions">%1$d</xliff:g> sessions selected</item>
    </plurals>
    <string name="session_subtitle"><xliff:g id="time">%1$s</xliff:g> in <xliff:g id="room">%2$s</xliff:g></string>
    <string name="all_tracks">All tracks</string>
    <string name="all_tracks_sessions">All sessions</string>
    <string name="all_tracks_vendors">All companies</string>
    <string name="all_tracks_subtitle_sessions">All sessions at Google I/O 2012.</string>
    <string name="all_tracks_subtitle_vendors">All developer sandbox companies at Google I/O 2012.</string>
    <string name="empty_sessions">No sessions found.</string>
    <string name="empty_session_detail">No session details found.</string>
    <string name="empty_vendors">No developer sandbox companies found.</string>
    <string name="empty_social_stream">No posts found.</string>
    <string name="empty_waiting_for_sync">Waiting for sync&#8230;</string>
    <string name="empty_captions">No captions found for this session.</string>
    <string name="unknown_room">(Unspecified Room)</string>
    <string name="codelab_room">Code Labs (Level 2)</string>
    <string name="keynote_room">Level 3</string>
    <string name="session_links">Links</string>
    <string name="session_requirements">Requirements</string>
    <string name="session_speakers">Speakers</string>
    <string name="session_link_main">Web link</string>
    <string name="session_link_youtube">YouTube video</string>
    <string name="session_link_pdf">Slides (PDF)</string>
    <string name="session_link_notes">Official notes</string>
    <string name="session_link_livestream">Watch on I/O Live</string>
    <string name="session_livestream_title">I/O Live</string>
    <string name="session_livestream_track_title">%s Track</string>
    <string name="session_livestream_info">Info</string>
    <string name="session_livestream_captions">Captions</string>
    <string name="session_livestream_error">Sorry, there was an error loading the live stream, please try again later</string>
    <string name="session_livestream_keynote_title">Google I/O - %s</string>
    <string name="session_livestream_keynote_desc">Google I/O\'s much-anticipated daily kickoff events will make you among the first developers to see what we\'ve been working on here at Google. Grab some popcorn, kick back and enjoy the show directly from your Android powered device.</string>
    <string name="codelab_title_template">Code Lab: <xliff:g id="title">%1$s</xliff:g></string>
    <string name="vendor_exhibitors_prefix">Exhibitors: </string>
    <string name="search_label">Google I/O Sessions</string>
    <string name="search_hint">Search sessions</string>
    <string name="share_template">Checking out \'<xliff:g id="title">%1$s</xliff:g>\' at <xliff:g id="hashtags">%2$s</xliff:g> <xliff:g id="url">%3$s</xliff:g></string>
    <string name="share_livestream_template">Watching I/O Live: \'<xliff:g id="title">%1$s</xliff:g>\' at <xliff:g id="hashtags">%2$s</xliff:g> <xliff:g id="url">%3$s</xliff:g></string>
    <string name="whats_on_countdown_title_0"><xliff:g id="remaining_time">%1$s</xliff:g>\nuntil Google I/O</string>
    <plurals name="whats_on_countdown_title">
        <item quantity="one"><xliff:g id="number_of_days">%1$s</xliff:g> day, <xliff:g id="remaining_time">%2$s</xliff:g>\nuntil Google I/O</item>
        <item quantity="other"><xliff:g id="number_of_days">%1$s</xliff:g> days, <xliff:g id="remaining_time">%2$s</xliff:g>\nuntil Google I/O</item>
    </plurals>
    <string name="whats_on_thank_you_title">See you next year!</string>
    <string name="news_will_appear_here">News will appear here</string>
    <string name="welcome_to_google_i_o">Welcome to Google I/O!</string>
    <string name="permission_write">Modify Google I/O schedule data</string>
    <plurals name="toast_added_to_schedule">
        <item quantity="one">Session added to your agenda</item>
        <item quantity="other"><xliff:g id="number_of_sessions">%1$s</xliff:g> sessions added to your agenda</item>
    </plurals>
    <plurals name="toast_removed_from_schedule">
        <item quantity="one">Session removed from your agenda</item>
        <item quantity="other"><xliff:g id="number_of_sessions">%1$s</xliff:g> sessions removed from your agenda</item>
    </plurals>
    <string name="schedule_empty_slot_title_template">Browse<xliff:g id="block_type">%1$s</xliff:g>&#8230;</string>
    <string name="schedule_empty_slot_subtitle">Empty slot</string>
    <string name="schedule_conflict_title"><xliff:g id="num_sessions">%1$s</xliff:g> chosen sessions</string>
    <string name="schedule_conflict_subtitle">Conflict in slot</string>
    <string name="schedule_block_title_sessions">Sessions</string>
    <string name="schedule_block_title_code_labs">Code Labs</string>
    <string name="schedule_block_title_keynote">Keynote</string>
    <string name="description_choose_account"><![CDATA[
        Welcome to the Google I/O 2012 app, your official companion to the Google I/O conference
        taking place in San Francisco from June 27th to June 29th, 2012.<br>
        <br>
        <font color="#4683ec"><b>Sign in with the Google account you registered with to
        get started</b></font>.
    ]]></string>
    <string name="title_accounts_list">Select a Google account</string>
    <string name="empty_accounts">No Google accounts are available. Add an account to continue.</string>
    <string name="no_connection_cant_login">Can\'t sign in. Check your network connection.</string>
    <string name="taking_a_while">This is taking a while&#8230;</string>
    <string name="eula_title">Google I/O 2012 Android App End User License Agreement</string>
    <string name="about_eula">End User License Agreement</string>
    <string name="about_licenses">Open Source Licenses</string>
    <string name="about_body"><![CDATA[
        <b>Google I/O 2012</b><br>
        Version %s<br><br>
        <a href="http://m.google.com/utos">Terms of Service</a><br><br>
        <a href="http://www.google.com/policies/privacy/">Privacy Policy</a>
    ]]></string>
    <string name="eula_text"><![CDATA[
        By downloading, installing or using this application or any portion thereof
        (\"Application\"), you agree to these terms and conditions.<br>
        <br>
        Your use of this Application is governed by: (a) the Google Terms of Service
        (<a href="http://m.google.com/utos">m.google.com/utos</a>); (b) Google\'s Privacy Policy
        (<a href="http://www.google.com/policies/privacy">http://www.google.com/policies/privacy</a>);
        and (c) any applicable Google Service-specific terms of service or privacy policies.
        Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.<br>
        <br>
        This Application collects certain information as you use it, including via Google Analytics.
        Google\'s Privacy Policy explains how Google treats your information and protects your
        privacy when you use the Application.  You agree to the use of your data in accordance
        with Google\'s privacy policy.
    ]]></string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <plurals name="session_notification_ticker">
        <item quantity="one">1 session is about to start.</item>
        <item quantity="other">%d sessions are about to start.</item>
    </plurals>
    <string name="session_notification_text_1">starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</string>
    <plurals name="session_notification_text">
        <item quantity="one">and 1 other starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other">and <xliff:g id="num_sessions">%2$d</xliff:g> others starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <plurals name="session_notification_title">
        <item quantity="one">1 session is starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
        <item quantity="other"><xliff:g id="num_sessions">%2$d</xliff:g> sessions are starting in <xliff:g id="remaining_time">%1$d</xliff:g> min.</item>
    </plurals>
    <string name="snooze_x_min">Snooze <xliff:g id="remaining_time">%1$d</xliff:g> min.</string>
    <string name="session_calendar_suffix">- added by Google I/O 2012 Android app</string>
    <string name="toast_deleting_sessions_from_calendar">Removing your Google I/O 2012 sessions from Google Calendar&#8230;</string>
    <string name="help_add_to_schedule"><![CDATA[
        To add this session to your schedule, touch the &nbsp;<img src="add_to_schedule" alt="Add to agenda">&nbsp; icon.
    ]]></string>
    <string name="help_add_to_schedule_alt"><![CDATA[
        To add this session to your schedule, touch the add to agenda icon.<br>
    ]]></string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="loading">Loading&#8230;</string>
    <string name="retry">Retry</string>
    <string name="stream_error">Couldn\'t load the Google+ stream.</string>
    <string name="stream_originally_shared"><xliff:g id="name">%s</xliff:g> originally shared this post</string>
    <string name="empty_widget_text">No more upcoming sessions.\nSee you next year!</string>
    <string name="empty_widget_text_signed_out">Touch the Google I/O 2012 logo above to sign in and begin using the app.</string>
    <string name="now_playing_badge"><![CDATA[<font color="#4683ec"><small><b>NOW</b></small></font>]]></string>
    <string name="live_available_badge"><![CDATA[<font color="#999999"><small><b>LIVE</b></small></font>]]></string>
    <string name="live_now_badge"><![CDATA[<font color="#ff4444"><small><b>LIVE</b></small></font>]]></string>
    <string name="missed_io_title">No Google I/O sessions are currently playing.</string>
    <string name="missed_io_subtitle">Check out https://developers.google.com/io for the latest on Google I/O.</string>
    <string name="error_tv_no_url">No I/O Live stream was available for the selected session.</string>
    <string name="description_view_beam">Show Android Beam easter egg</string>
</resources>